swagger and project fixed
